--- a/CAP_PROJECT/.settings/org.talend.repository.prefs
+++ b/CAP_PROJECT/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=main
 repository.project.id=enc\:migration.token.encryption.key\:mlMF1kWDOJUeuq84rGcuGlfsp15OVkvi0iBXqHZQniZAzAAaHmshq+0\=
