--- a/PROJECT_CAP/.settings/org.talend.repository.prefs
+++ b/PROJECT_CAP/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=main
 repository.project.id=enc\:migration.token.encryption.key\:V2ekHvFJFtwBLCZUaDS92Q5BYb3BJJt6MMV2z2p++ul3/qiiU99B6I8\=
